--- a/index.html
+++ b/index.html
@@ -46,10 +46,17 @@
           <label for="zip">Zip Code</label>
           <input type="text" id="zip" name="user_zip">
     </form>
-  
+
 <form>
     <h2 class="section-header">Newsletter</h2>
 
+            <label for="user_format">Select the newsletters you would like to receive</label>
+            <input type="checkbox" id="html_news" value="html_news" name="user_news">
+            <label for="html_news">HTML News</label>
+            <input type="checkbox" id="css_news" value="css_news" name="user_news">
+            <label for="css_news">CSS News</label>
+            <input type="checkbox" id="javascript_news" id="javascript_news" value="javascript_news" name="user_news">
+            <label for="javascript_news">Javascript News</label>
 
         <form class="radio_buttons">
             <label>Newsletter format</label>
