--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <header class="top-banner">
   <h1 class="website-title">The Code Review</h1>
 </header>
-
+  <div id="container">
 
           <h2 class="sign-up">Signup for our newsletter</h2>
         <p class="paragraph">Get the latest news on how your code is doing right in your inbox</p>
@@ -74,5 +74,5 @@
   <footer class="copyright">Copyright The Code Review</footer>
 </fieldset>
 
-
+</div>
 </html>
