--- a/index.html
+++ b/index.html
@@ -17,24 +17,24 @@
           <h2 class="sign-up">Signup for our newsletter</h2>
         <p class="paragraph">Get the latest news on how your code is doing right in your inbox</p>
         <form action="index.html" method="post" class="form">
-          <fieldset>
+          <fieldset class="top-form">
             <legend>Contact Information</legend>
 
 
           <label for="name" class="contact_label">Full Name</label>
-          <input type="text" id="name" name="user_name" placeholder="Required" class="contact_input">
+          <input required type="text" id="name" name="user_name" placeholder="Required" class="contact_input">
 
           <label for="email">Email Address</label>
-          <input type="email" id="email" name="user_email" placeholder="Required">
+          <input required type="email" id="email" name="user_email" placeholder="Required">
 
           <label for="tel">Phone Number</label>
-          <input type="tel" id="telephone" name="user_telephone">
+          <input required type="tel" id="telephone" name="user_telephone" placeholder="Required">
 
-          <label for="street-address">Street Address</label>
-          <input type="address" id="user_address" name="user_address">
+          <label for="user_address">Street Address</label>
+          <input required type="address" id="user_address" name="user_address" placeholder="Required">
 
           <label for="city">City</label>
-          <input type="city" id="city" name="user_city">
+          <input required type="city" id="city" name="user_city" placeholder="Required">
 
           <label for="state">State</label>
           <select id="state" name="user_state">
@@ -92,12 +92,12 @@
                     </select>
 
                 <label for="zip">Zip Code</label>
-                <input type="text" id="zip" name="user_zip">
+                <input required type="text" id="zip" name="user_zip" placeholder="Required">
               </fieldset>
 
 
             <fieldset class="fieldset">
-              <legend>Newsletter</legend>
+              <legend class="newsletter">Newsletter</legend>
 
                 <label class="newsletter_header">Select the newsletters you would like to receive</label>
                 <input type="checkbox" id="html_news" value="html_news" name="user_news">
