--- a/index.html
+++ b/index.html
@@ -1,45 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width= 320px, initial-scale=1">
-    <title>An Online Registration Form</title>
-    <link rel="stylesheet" href="CSS/normalize.css">
-    <link rel="stylesheet" href="CSS/styles.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Trirong">
-  </head>
-<header class="top-banner">
-  <h1 class="website-title">The Code Review</h1>
-</header>
-<body>
-  <div class="container">
+    <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta charset="UTF-8">
+        <title>Online Registration Form</title>
+        <link rel="stylesheet" href="CSS/styles.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Trirong">
+    </head>
+    <body>
+      <div class="container">
+          <div class="top-section">
+              <div class="website-title">
+                  <h1>The Code Review</h1>
+              </div>
 
-          <h2 class="sign-up">Signup for our newsletter</h2>
-        <p class="paragraph">Get the latest news on how your code is doing right in your inbox</p>
-        <form action="index.html" method="post" class="form">
-          <fieldset class="top-form">
+              <div class="first-header">
+                  <h2>Sign Up For Our Newsletter</h2>
+              </div>
+
+              <div class="paragraph">
+                  <p>Get the latest news on how your code is doing right in your inbox</p>
+            </div>
+            <hr class="top-border">
+            <hr class="bottom-border">
+          </div>
+
+      <form action="project3.html">
+        <fieldset>
             <legend>Contact Information</legend>
-
-
-          <label for="name" class="contact_label">Full Name</label>
-          <input required type="text" id="name" name="user_name" placeholder="Required" class="contact_input">
-
-          <label for="email">Email Address</label>
-          <input required type="email" id="email" name="user_email" placeholder="Required">
-
-          <label for="tel">Phone Number</label>
-          <input required type="tel" id="telephone" name="user_telephone" placeholder="Required">
-
-          <label for="user_address">Street Address</label>
-          <input required type="address" id="user_address" name="user_address" placeholder="Required">
-
-          <label for="city">City</label>
-          <input required type="city" id="city" name="user_city" placeholder="Required">
-
-          <label for="state">State</label>
-          <select id="state" name="user_state">
-            <option value="" disabled selected>Choose State</option>
-            <option value="alabama">Alabama</option>
+              <div class="contact-form">
+                <div class="contact">
+                    <label for="name" class="contact-label">Full Name</label>
+                    <input required type="text" class="contact-input" id="name" name="user-name" placeholder="Required">
+                </div>
+                <div class="contact">
+                    <label for="email" class="contact-label">Email Address</label>
+                    <input required type="email" class="contact-input" id="email" name="user-email" placeholder="Required">
+                </div>
+                <div class="contact">
+                    <label for="phone" class="contact-label">Phone Number</label>
+                    <input type="tel" class="contact-input" id="phone" name="user-phone" placeholder="Optional">
+                </div>
+                <div class="contact">
+                    <label for="address" class="contact-label">Street Address</label>
+                    <input required type="text" class="contact-input" id="address" name="user-address" placeholder="Required">
+                </div>
+                <div class="contact">
+                    <label for="city" class="contact-label">City</label>
+                    <input required type="text" class="contact-input" id="city" name="user-city" placeholder="Required">
+                </div>
+                <div class="contact">
+                    <label for="states" class="contact-label">State</label>
+                    <select name="states" class="contact-input" id="states">
+                        <option value="" disabled selected>Choose State</option>
                         <option value="alaska">Alaska</option>
                         <option value="arizona">Arizona</option>
                         <option value="arkansas">Arkansas</option>
@@ -90,38 +103,75 @@
                         <option value="wisconsin">Wisconsin</option>
                         <option value="wyoming">Wyoming</option>
                     </select>
+                    </div>
+                        <div class="zip-form">
+                          <label for="zip" class="contact-label" >Zip Code</label>
+                          <input required type="text" class="contact-input" id="zip" name="user-zipcode" placeholder="Required">
+                        </div>
+              </div>
+          </fieldset>
+          <hr class="border-bottom">
 
-                <label for="zip">Zip Code</label>
-                <input required type="text" id="zip" name="user_zip" placeholder="Required">
-              </fieldset>
+          <div class="newsletter-checkbox">
+                <fieldset>
+                    <legend>Newsletter</legend>
+                    <p class="newsletter-header">Select the newsletters you would like to receive</p>
+
+                    <div class="checkbox-section">
+                            <div class="checkdiv">
+                                <input class="checkbox" type="checkbox" id="html-news" name="checkbox" value="HTML">
+                                <label for="html-news" class="checkbox-text">HTML News</label>
+                            </div>
+                            <div class="checkdiv">
+                                <input class="checkbox" type="checkbox" id="css-news" name="checkbox" value="CSS">
+                                <label for="css-news" class="checkbox-text">CSS News</label>
+                            </div>
+                            <div class="checkdiv">
+                                <input class="checkbox" type="checkbox" id="java-news" name="checkbox" value="Javascript">
+                                <label for="java-news" class="checkbox-text">Javascript News</label>
+                            </div>
 
 
-            <fieldset class="fieldset">
-              <legend class="newsletter">Newsletter</legend>
+                    </div>
+                </fieldset>
+            </div>
 
-                <label class="newsletter_header">Select the newsletters you would like to receive</label>
-                <input type="checkbox" id="html_news" value="html_news" name="user_news">
-                <label for="html_news">HTML News</label><br>
-                <input type="checkbox" id="css_news" value="css_news" name="user_news">
-                <label for="css_news">CSS News</label><br>
-                <input type="checkbox" id="javascript_news" id="javascript_news" value="javascript_news" name="user_news">
-                <label for="javascript_news">Javascript News</label>
+            <div class="newsletter-radio">
+                <fieldset>
+                    <p class="newsletter-header">Newsletter format</p>
+                    <div class="radio-container">
+                        <div class="radio-div">
+                            <input type="radio" id="html-format" class="radio-buttons" name="format" value="html">
+                            <label for="html-format" class="radiotext">HTML</label>
+                        </div>
+                        <div class="radio-div">
+                            <input type="radio" id="text-format" class="radio-buttons" name="format" value="text">
+                            <label for="text-format" class="radiotext">Plain text</label>
+                        </div>
+                    </div>
+                </fieldset>
+            </div>
 
+            <div class="textarea">
+                <fieldset>
+                    <label for="other-topics" class="textarea">Other topics you'd like to hear about</label>
+                    <textarea id="other-topics" name="other-topics"></textarea>
+                </fieldset>
+            </div>
 
-                <label for="user_format" class="newsletter_header">Newsletter Format</label>
-                <input type="radio" id="html" value="html" name="user_format">
-                <label for="html" class="user_format">HTML</label><br>
-                <input type="radio" id="plain-text" value="plain-text" name="user_format">
-                <label for="plain-text" class="user_format">Plain Text</label><br>
+            <div class="button">
+                <fieldset class="button">
+                    <label for="button" class="buttontext"></label>
+                    <button type="submit" id="button" class="button-shape">Sign Up</button>
 
+                    <footer>
+                        <p class="copy"><em>Copyright The Code Review</em></p>
+                    </footer>
+                </fieldset>
+            </div>
+        </form>
 
-              <label for="topics" class="newsletter_header">Other topics you'd like to hear about</label>
-              <textarea id="topics" name="user_topics"></textarea>
+    </div>
+    </body>
 
-              <button type="submit">Sign Up</button>
-</body>
-              <footer class="copyright">Copyright The Code Review</footer>
-        </fieldset>
-      </form>
-  </div>
 </html>
